# ASRE_Integral_Method

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: asre_params.yaml  data_paths.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: Moat_Portfolio.py  README.md  asre_daily_actions.csv  asre_daily_audit.json  asre_daily_report.txt  asre_daily_scores.csv  asre_institutional.py  asre_portfolio.py  asre_portfolio_audit.json  asre_portfolio_results.csv  audit_report_2026.txt  debug.csv  diagnose_calibration.py  forex_news_filter.py  forex_scalping_engine.py  investing_10k.py  investing_backtest_groq.py  investment_backtest_ASML_r_final_20260118_135611.csv  investment_backtest_ASML_r_final_20260118_135653.csv  investment_backtest_ASML_r_final_20260118_135836.csv  investment_backtest_ASML_r_final_20260119_212904.csv  investment_backtest_ASML_r_final_20260119_212933.csv  investment_backtest_BAC_r_final_20260115_172219.csv  investment_backtest_CRM_r_final_20260116_180406.csv  investment_backtest_GME_r_final_20260115_170900.csv  investment_backtest_GME_r_final_20260115_171735.csv  investment_backtest_GOOGL_r_final_20260116_180032.csv  investment_backtest_GOOGL_r_final_20260119_214100.csv  investment_backtest_HINDUNILVR.ns_r_final_20260118_140215.csv  investment_backtest_MA_r_final_20260118_223013.csv  investment_backtest_MA_r_final_20260118_223049.csv  investment_backtest_MA_r_final_20260118_223137.csv  investment_backtest_MA_r_final_20260118_223238.csv  investment_backtest_MA_r_final_20260118_223313.csv  (+188 more)
(+235 files in other folders)
